Alignment fixed
Alignment fixed for all pages from left to center by percentage.

--- a/add.css
+++ b/add.css
@@ -133,7 +133,7 @@
     position: absolute;
     width: 300px;
     height: 60px;
-    left: 420px;
+    left: 35%;
     top: 150px;
     font-family: 'Lato';
     font-style: normal;
@@ -154,7 +154,7 @@
     position: absolute;
     width: 440px;
     height: 48px;
-    left: 420px;
+    left: 35%;
     top: 250px;
     border: 1px solid #C5C5C5;
     border-radius: 8px;
@@ -171,7 +171,7 @@
     position: absolute;
     width: 440px;
     height: 48px;
-    left: 420px;
+    left: 35%;
     top: 340px;
     border: 1px solid #C5C5C5;
     border-radius: 8px;
@@ -188,7 +188,7 @@
     position: absolute;
     width: 440px;
     height: 48px;
-    left: 420px;
+    left: 35%;
     top: 430px;
     border: 1px solid #C5C5C5;
     border-radius: 8px;
@@ -205,7 +205,7 @@
     position: absolute;
     width: 440px;
     height: 48px;
-    left: 420px;
+    left: 35%;
     top: 520px;
     border: 1px solid #C5C5C5;
     border-radius: 8px;
@@ -220,7 +220,7 @@
     position: absolute;
     width: 440px;
     height: 52px;
-    left: 420px;
+    left: 35%;
     top: 610px;
     background: #009DDC;
     border-radius: 8px;
